# kv-server

./: Cargo.toml  build.rs
examples/: client.rs  dummy_server.rs  server.rs
src/: error.rs  lib.rs
src/pb/: abi.rs  mod.rs
src/service/: command_service.rs  mod.rs
src/storage/: memory.rs  mod.rs
