[package]
name = "kv-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"          # 高效处理网络 buffer 的库
dashmap = "6.0.1"    # 并发 HashMap
prost = "0.8"        # 处理 protobuf 的代码
thiserror = "1.0.63"
tracing = "0.1.40"   # 日志处理

[dev-dependencies]
anyhow = "1" # 错误处理
async-prost = "0.2.1" # 支持把 protobuf 封装成 TCP frame
futures = "0.3" # 提供 Stream trait
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "io-util",
  "macros",
  "net",
] } # 异步网络库
tracing-subscriber = "0.3.18" # 日志处理

[build-dependencies]
prost-build = "0.13.1" # 编译 protobuf
